[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-python-head"
version = "0.1.0"
authors = [
  { name="Анастасія", email="trushchaknastya@gmail.com" },
]
description = "Реалізація команди head на Python за допомогою Click."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/ВАШ_НІКНЕЙМ/my-python-head"
Issues = "https://github.com/ВАШ_НІКНЕЙМ/my-python-head/issues"

[project.scripts]
myhead = "myhead.cli:main"